--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -1,5 +1,56 @@
+page-profile {
+  ion-item ion-label {
+    margin: 0 !important;
+  }
 
-page-account img {
-  max-width: 140px;
-  border-radius: 50%;
+  ion-list {
+    margin: 0;
+    padding: 0;
+  }
+
+  ion-list-header {
+    background-color: #ECECEC;
+    margin: 0;
+    padding: 10px 16px;
+  }
+
+  ion-item {
+    padding: 0;
+  }
+
+  ion-datetime {
+    padding-left: 3px !important;
+  }
+
+  .item-inner {
+    border: none !important;
+    padding: 0;
+  }
+
+  .popover-content {
+    min-height: 0 !important;
+    max-height: 88px !important;
+  }
+
+  .profile-popover {
+    margin-top: -1px !important;
+  }
+
+  .placeholder-profile {
+    color: #CCCCCC;
+  }
+
+  .dob-label {
+    color: #000000 !important;
+    padding: 10px !important;
+    max-width: 50% !important;
+  }
+
+
 }
+
+
+// page-account img {
+//   max-width: 140px;
+//   border-radius: 50%;
+// }
